syntax = "proto3";
package admin;

option go_package = "admin/v1/question;admin";

import "third_party/tagger/tagger.proto";

message QuestionListRequest {
  string search = 1 [(tagger.tags) = "form:\"search\""];
  int32 page = 2 [(tagger.tags) = "form:\"page\""];
  int32 number = 3 [(tagger.tags) = "form:\"number\""];
}

message QuestionListResponse {
  message QuestionItem {
    int32 id = 1 [(tagger.tags) = "binding:\"required\""];
    string title = 2 [(tagger.tags) = "binding:\"required\""];
    repeated string tag = 3 [(tagger.tags) = "binding:\"required\""];
    int32 degree = 4 [(tagger.tags) = "binding:\"required\""];
    float passing_rate = 5 [(tagger.tags) = "binding:\"required\""];
    int32 owner_id = 6 [(tagger.tags) = "binding:\"required\""];
    string content = 7 [(tagger.tags) = "binding:\"required\""];
    string answer = 8 [(tagger.tags) = "binding:\"required\""];
    int32 status = 9 [(tagger.tags) = "binding:\"required\""];
  }

  repeated QuestionItem question_list = 1 [(tagger.tags) = "binding:\"required\""];
  int32 total = 2 [(tagger.tags) = "binding:\"required\""];
}
